--- a/app/src/main/res/layout/activity_difficulty_screen.xml
+++ b/app/src/main/res/layout/activity_difficulty_screen.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     android:onClick="goGameScreenAa"
+    android:theme="@android:style/Theme.Translucent.NoTitleBar"
     tools:context=".DifficultyScreen">
 
     <ImageButton
         android:id="@+id/thistedKommune"
-        android:layout_width="375dp"
+        android:layout_width="350dp"
         android:layout_height="125dp"
-        android:layout_marginStart="19dp"
-        android:layout_marginLeft="19dp"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginRight="18dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginRight="31dp"
         android:background="@drawable/thisted_kommune_logo"
         android:onClick="goGameScreenTh"
         android:scaleType="fitCenter"
@@ -25,13 +27,13 @@
 
     <ImageButton
         android:id="@+id/aalborgKommune"
-        android:layout_width="375dp"
+        android:layout_width="350dp"
         android:layout_height="125dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="86dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginRight="18dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginRight="31dp"
         android:background="@drawable/aalborg_kommune_logo"
         android:onClick="goGameScreenAa"
         android:scaleType="fitCenter"
@@ -41,17 +43,36 @@
 
     <ImageButton
         android:id="@+id/skiveKommune"
-        android:layout_width="375dp"
+        android:layout_width="350dp"
         android:layout_height="125dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginLeft="30dp"
         android:layout_marginTop="86dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginRight="18dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginRight="31dp"
+        android:layout_marginBottom="98dp"
         android:background="@drawable/skive_kommune_logo"
         android:onClick="goGameScreenSk"
         android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/aalborgKommune" />
+
+    <ImageButton
+        android:id="@+id/Achievements"
+        android:layout_width="63dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="333dp"
+        android:layout_marginLeft="333dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/achievements_logo"
+        android:onClick="goAchievementScreen"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/achievements_logo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
