--- a/app/src/main/res/layout/activity_title_screen.xml
+++ b/app/src/main/res/layout/activity_title_screen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TitleScreen"
+    android:theme="@android:style/Theme.Translucent.NoTitleBar"
     android:background="@drawable/title_screen">
 
     <ImageButton
