--- a/app/src/main/res/layout/activity_game_screen_aa.xml
+++ b/app/src/main/res/layout/activity_game_screen_aa.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="@drawable/title_screen_two"
     android:theme="@android:style/Theme.Translucent.NoTitleBar"
     tools:context=".GameScreenAa">
 
