--- a/app/src/main/res/layout/activity_title_screen.xml
+++ b/app/src/main/res/layout/activity_title_screen.xml
@@ -21,6 +21,7 @@
         android:background="@drawable/play_icon"
         android:onClick="goDifficultyScreen"
         android:scaleType="fitCenter"
+        android:tint="#FF0000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
